[package]
name = "crudapi"
version = "0.1.0"
authors = ["asepnur"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.9.0"

chrono = { version = "0.4.6", features = ["serde"] }
actix-web = "1.0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.1"
r2d2 = "0.8"